Fixed segmentation fault issues with hdf5combine routines. At least they seem to be fixed for me now. Need to test on other systems.

--- a/yaml_files/spartan.yaml
+++ b/yaml_files/spartan.yaml
@@ -48,8 +48,8 @@ Scanner:
     multinest:
       plugin: multinest
       like:  LogLike
-      nlive: 5000
-      tol: 0.0000000000001
+      nlive: 1000
+      tol: 0.01
 
     mcmc:
       plugin: great
@@ -87,6 +87,8 @@ KeyValues:
   default_output_path: "runs/spartan"
 
   rng: ranlux48
+
+  print_timing_data: true 
 
   likelihood:
     model_invalid_for_lnlike_below: -1e6
