updated yaml files with eft/unitarity (diver scans)

--- a/yaml_files/scans/Dirac/DiracDM_high_mass_diver.yaml
+++ b/yaml_files/scans/Dirac/DiracDM_high_mass_diver.yaml
@@ -196,7 +196,7 @@ Rules:
   - capability: DiracDM_spectrum
     function: get_DiracDM_spectrum
     options: 
-      impose_EFT_validity: false
+      impose_EFT_validity: true
 
 ##############################################################################################
 Printer:
