--- a/yaml_files/scans/Vector/VectorDM_low_mass_diver.yaml
+++ b/yaml_files/scans/Vector/VectorDM_low_mass_diver.yaml
@@ -195,7 +195,7 @@ Rules:
   - capability: VectorDM_spectrum
     function: get_VectorDM_spectrum
     options:
-      impose_pert_unitarity: false
+      impose_pert_unitarity: true
 
 ##############################################################################################
 Printer:
