--- a/yaml_files/RHN_diff_NH_123_lowcoupling.yaml
+++ b/yaml_files/RHN_diff_NH_123_lowcoupling.yaml
@@ -302,6 +302,10 @@ ObsLikes:
 
 Rules:
 
+  - capability: Ue1
+    options:
+      upper_limit: 1e-10
+
   - capability: m_nu
     options:
       ordering: 1
@@ -328,5 +332,5 @@ KeyValues:
     model_invalid_for_lnlike_below: -1e10
     debug: false
 
-#  default_output_path: "../../../scratch/RHN_diff_NH_123_log_log/"
-  default_output_path: "runs/RHN_diff_NH_123_log_log/"
+#  default_output_path: "../../../scratch/RHN_diff_NH_123_lowcoupling/"
+  default_output_path: "runs/RHN_diff_NH_123_lowcoupling/"
