Modified yaml files

--- a/yaml_files/RHN_diff_IH_123_lowmass.yaml
+++ b/yaml_files/RHN_diff_IH_123_lowmass.yaml
@@ -125,6 +125,9 @@ ObsLikes:
   - capability: lnL_W_mass
     purpose: LogLike
 
+  - capability: lnL_sinW2
+    purpose: LogLike
+
   - capability: lnL_Z_inv_width
     purpose: LogLike
 
