--- a/yaml_files/ColliderBit_CMSSM.yaml
+++ b/yaml_files/ColliderBit_CMSSM.yaml
@@ -353,11 +353,11 @@ Rules:
                    "ATLAS_8TeV_3LEPEW_20invfb"],
                   ["ATLAS_13TeV_0LEP_13invfb",
                    "ATLAS_13TeV_MultiLEP_36invfb",
-                   "ATLAS_13TeV_0LEPStop_20invfb",
+                   "ATLAS_13TeV_0LEPStop_36invfb",
                    "ATLAS_13TeV_2LEPStop_36invfb",
-                   "ATLAS_13TeV_RJ3L_lowmass_36invfb",
                    "ATLAS_13TeV_2bMET_36invfb"] ]
 
+                   # "ATLAS_13TeV_RJ3L_lowmass_36invfb",
                    # "ATLAS_13TeV_1LEPStop_36invfb",
                    #
 
@@ -404,6 +404,9 @@ Rules:
   - capability: LHC_LogLikes
     backends:
     - {capability: lnlike_marg_poisson_lognormal_error}
+    options:
+      covariance_marg_convthres: 0.01
+      covariance_nsamples_start: 100000
 
 
     # Set the names of key log files
