Updated YAML files with the latest settings for SR covariance marginalisation
	modified:   yaml_files/CMSSM.yaml
	modified:   yaml_files/MSSM7.yaml
	modified:   yaml_files/MSSM9.yaml
	modified:   yaml_files/MSSMEW.yaml

--- a/yaml_files/CMSSM.yaml
+++ b/yaml_files/CMSSM.yaml
@@ -587,7 +587,8 @@ Rules:
     backends:
     - {capability: lnlike_marg_poisson_lognormal_error}
     options:
-      covariance_samples: 100000
+      covariance_marg_convthres: 0.01
+      covariance_nsamples_start: 100000
 
 
 Logger:
