Commented out ROOT-dependent ColliderBit analysis "ATLAS_13TeV_1LEPStop_36invfb" in MSSM9.yaml. This analysis does not exist on the master branch. This fixes #36.
	modified:   yaml_files/MSSM9.yaml

--- a/yaml_files/MSSM9.yaml
+++ b/yaml_files/MSSM9.yaml
@@ -443,9 +443,10 @@ Rules:
       analyses: [ ["ATLAS_13TeV_0LEP_36invfb",
                    "ATLAS_13TeV_MultiLEP_36invfb",
                    "ATLAS_13TeV_0LEPStop_36invfb",
-                   "ATLAS_13TeV_1LEPStop_36invfb",
                    "ATLAS_13TeV_2LEPStop_36invfb",
                    "ATLAS_13TeV_2bMET_36invfb"] ]
+
+                   # "ATLAS_13TeV_1LEPStop_36invfb",  # Commented out due to ROOT dependence. Will be included again later.
 
   # CMS analysis setup
   - capability: CMSAnalysisContainer
