--- a/yaml_files/RHN_diff_IH_123.yaml
+++ b/yaml_files/RHN_diff_IH_123.yaml
@@ -30,13 +30,13 @@ Parameters:
     CKM_etabar  :  0.353
 
     mNu1:
-      range: [1E-16, 1E-13]
+      range: [1E-11, 2.3E-10]
       prior_type: log
     mNu2:
-      range: [1E-12, 2.3E-10]
+      range: [1E-11, 2.3E-10]
       prior_type: log
     mNu3:
-      range: [1E-11, 2.3E-10]
+      range: [1E-13, 2.3E-10]
       prior_type: log
 
     alpha1:
@@ -313,7 +313,7 @@ Rules:
 
   - capability: m_nu
     options:
-      ordering: 1
+      ordering: 0
 
   - capability: SeesawI_Theta 
     options:
@@ -337,5 +337,5 @@ KeyValues:
     model_invalid_for_lnlike_below: -1e10
     debug: false
 
-    #  default_output_path: "../../../scratch/RHN_diff_NH_123_lightnu/"
-  default_output_path: "runs/RHN_diff_NH_123_lightnu/"
+    #  default_output_path: "../../../scratch/RHN_diff_IH_123/"
+  default_output_path: "runs/RHN_diff_IH_123/"
