--- a/yaml_files/RHN_diff_IH_123_lowcoupling.yaml
+++ b/yaml_files/RHN_diff_IH_123_lowcoupling.yaml
@@ -305,6 +305,12 @@ ObsLikes:
   - capability: Ut3_phase
     purpose: Observable
 
+  - capability: Gamma_0nubb_Xe
+    purpose: Observable
+
+  - capability: Gamma_0nubb_Ge  
+    purpose: Observable
+
 Rules:
 
   - capability: Ue1
@@ -337,4 +343,4 @@ KeyValues:
     model_invalid_for_lnlike_below: -1e10
     debug: false
 
-  default_output_path: "."
+  default_output_path: "runs/RHN_diff_IH_123_lowcoupling/"
