--- a/yaml_files/RHN_diff_NH_123.yaml
+++ b/yaml_files/RHN_diff_NH_123.yaml
@@ -30,7 +30,7 @@ Parameters:
     CKM_etabar  :  0.353
 
     mNu1:
-      range: [1E-16, 1E-13]
+      range: [1E-13, 2.3E-10]
       prior_type: log
     mNu2:
       range: [1E-12, 2.3E-10]
@@ -302,12 +302,12 @@ ObsLikes:
 
   - capability: Ut3_phase
     purpose: Observable
-
+ 
   - capability: Gamma_0nubb_Xe
     purpose: Observable
 
   - capability: Gamma_0nubb_Ge  
-    purpose: Observable
+    purpose: Observable   
 
 Rules:
 
@@ -337,5 +337,5 @@ KeyValues:
     model_invalid_for_lnlike_below: -1e10
     debug: false
 
-    #  default_output_path: "../../../scratch/RHN_diff_NH_123_lightnu/"
-  default_output_path: "runs/RHN_diff_NH_123_lightnu/"
+    #  default_output_path: "../../../scratch/RHN_diff_NH_123/"
+  default_output_path: "runs/RHN_diff_NH_123/"
