Added DELPHI long-lived analysis limits and LHC limits, e and mu; data files, module functions, definitions, capabilities and likelihoods to base yaml files

--- a/yaml_files/RHN_diff_IH_123.yaml
+++ b/yaml_files/RHN_diff_IH_123.yaml
@@ -174,7 +174,10 @@ ObsLikes:
   - capability: lnLcharmmu
     purpose: LogLike
 
-  - capability: lnLdelphi
+  - capability: lnLdelphi_shortlived
+    purpose: LogLike
+
+  - capability: lnLdelphi_longlived
     purpose: LogLike
 
   - capability: lnLatlase
@@ -190,6 +193,12 @@ ObsLikes:
     purpose: LogLike
 
   - capability: lnLcharmtau
+    purpose: LogLike
+
+  - capability: lnLlhce
+    purpose: LogLike
+
+  - capability: lnLlhcmu
     purpose: LogLike
 
   # Theoretical constraints
