--- a/yaml_files/RHN_full_NH_123.yaml
+++ b/yaml_files/RHN_full_NH_123.yaml
@@ -173,7 +173,10 @@ ObsLikes:
   - capability: lnLcharmmu
     purpose: LogLike
 
-  - capability: lnLdelphi
+  - capability: lnLdelphi_shortlived
+    purpose: LogLike
+
+  - capability: lnLdelphi_longlived
     purpose: LogLike
 
   - capability: lnLatlase
@@ -189,6 +192,12 @@ ObsLikes:
     purpose: LogLike
 
   - capability: lnLcharmtau
+    purpose: LogLike
+
+  - capability: lnLlhce
+    purpose: LogLike
+
+  - capability: lnLlhcmu
     purpose: LogLike
 
   # Theoretical constraints
