Added Z and H invisible width capabilities to pp file

--- a/yaml_files/MSSMEW_pp.yaml
+++ b/yaml_files/MSSMEW_pp.yaml
@@ -135,10 +135,12 @@ ObsLikes:
     - purpose:    LogLike
       capability: OPAL_Degenerate_Chargino_LLike
 
-    # Other likelihoods
-    # TODO: Update to the new Z/H --> invisible likelihoods
-    - purpose:    LogLike
-      capability: lnL_Z_invisible_width
+    # Likelihoods for invisible decays of Z and Higgs bosons
+    - purpose: LogLike
+      capability: lnL_Z_inv
+
+    - purpose: LogLike
+      capability: lnL_Higgs_invWidth
 
     # Observables (not included in likelihood)
     - purpose:    likelihood_details
