--- a/yaml_files/RHN_full_NH_123.yaml
+++ b/yaml_files/RHN_full_NH_123.yaml
@@ -3,7 +3,7 @@
 Parameters:
 
   # SM parameters.
-  StandardModel_SLHA2:
+  StandardModel_mNudiff:
     # SLHA1
     alphainv:  1.27940010E+02 # alpha^{-1}(mZ)^MSbar *
     GF      :  1.16637870E-05 # G_Fermi **
@@ -29,15 +29,15 @@ Parameters:
     CKM_rhobar  :  0.117
     CKM_etabar  :  0.353
 
-    mNu1:
-      range: [1E-13, 2.3E-10]
+    mNu_light:
+      range: [1E-6, 1.]
       prior_type: log
-    mNu2:
-      range: [1E-12, 2.3E-10]
-      prior_type: log
-    mNu3:
-      range: [1E-11, 2.3E-10]
-      prior_type: log
+    dmNu21:
+      range: [6e-5, 9e-5]
+      prior_type: flat
+    dmNu3l:
+      range: [2e-3, 3e-3]
+      prior_type: flat
 
     alpha1:
       range: [0, 6.283]
@@ -104,9 +104,10 @@ Scanner:
 
     de:
       plugin: diver
+      version: 1.0.4
       like: LogLike
       NP: 19200
-      convthresh: 1e-5
+      convthresh: 1e-7
       lambdajDE: false
 
     multinest:
@@ -125,7 +126,7 @@ ObsLikes:
     purpose: LogLike
 
   - capability: lnL_Z_inv_width
-    purpose: LogLike
+    purpose: Observable
 
   - capability: lnL_W_decays
     purpose: LogLike
@@ -142,6 +143,18 @@ ObsLikes:
     purpose: LogLike
 
   - capability: lnL_0nubb
+    purpose: Observable
+
+  - capability: mbb_0nubb_Xe
+    purpose: Observable
+
+  - capability: mbb_0nubb_Ge
+    purpose: Observable
+
+  - capability: lnL_mbb_0nubb_KamLAND_Zen
+    purpose: LogLike
+
+  - capability: lnL_mbb_0nubb_GERDA
     purpose: LogLike
 
   - capability: lnLckm_Vusmin
@@ -260,52 +273,52 @@ ObsLikes:
   - capability: Ue1
     purpose: Observable
 
-  - capability: Um1
-    purpose: Observable
-
-  - capability: Ut1
-    purpose: Observable
-
-  - capability: Ue2
-    purpose: Observable
-
-  - capability: Um2
-    purpose: Observable
-
-  - capability: Ut2
-    purpose: Observable
-
-  - capability: Ue3
-    purpose: Observable
-
-  - capability: Um3
-    purpose: Observable
-
-  - capability: Ut3
-    purpose: Observable
-
   - capability: Ue1_phase
+    purpose: Observable
+
+  - capability: Um1
     purpose: Observable
 
   - capability: Um1_phase
     purpose: Observable
 
+  - capability: Ut1
+    purpose: Observable
+
   - capability: Ut1_phase
+    purpose: Observable
+
+  - capability: Ue2
     purpose: Observable
 
   - capability: Ue2_phase
     purpose: Observable
 
+  - capability: Um2
+    purpose: Observable
+
   - capability: Um2_phase
+    purpose: Observable
+
+  - capability: Ut2
     purpose: Observable
 
   - capability: Ut2_phase
     purpose: Observable
 
+  - capability: Ue3
+    purpose: Observable
+
   - capability: Ue3_phase
     purpose: Observable
 
+  - capability: Um3
+    purpose: Observable
+
   - capability: Um3_phase
+    purpose: Observable
+
+  - capability: Ut3
     purpose: Observable
 
   - capability: Ut3_phase
