--- a/yaml_files/RHN_full_NH.yaml
+++ b/yaml_files/RHN_full_NH.yaml
@@ -58,15 +58,15 @@ Parameters:
       range: [124.1, 127.3]
 
   # Right Handed Neutrino Parameters
-  RightHandedNeutrinos_diff:
+  RightHandedNeutrinos:
     M_1:
       range: [0.06, 500]
       prior_type: log
-    delta_M_2:
-      range: [1E-4, 500]
+    M_2:
+      range: [0.06, 500]
       prior_type: log
-    delta_M_3:
-      range: [1E-4, 500]
+    M_3:
+      range: [0.06, 500]
       prior_type: log
     ReOm23:
       range: [0, 6.283]
@@ -80,6 +80,8 @@ Parameters:
       range: [0, 6.283]
     ImOm12:
       range: [-7, 7]
+    Rorder:
+      range: [0, 6]
 
 Priors:
 
@@ -332,14 +334,6 @@ ObsLikes:
 
 Rules:
 
-  - capability: m_nu
-    options:
-      ordering: 1
-
-  - capability: SeesawI_Theta
-    options:
-      R_order: 123
-
   - capability: RKstar_0045_11
     function: RHN_RKstar_0045_11
 
@@ -358,4 +352,4 @@ KeyValues:
     model_invalid_for_lnlike_below: -1e10
     debug: false
 
-  default_output_path: "runs/RHN_diff_NH_123/"
+  default_output_path: "runs/RHN_full_NH_123/"
