--- a/yaml_files/MSSMEW_pp.yaml
+++ b/yaml_files/MSSMEW_pp.yaml
@@ -135,10 +135,12 @@ ObsLikes:
     - purpose:    LogLike
       capability: OPAL_Degenerate_Chargino_LLike
 
-    # Other likelihoods
-    # TODO: Update to the new Z/H --> invisible likelihoods
-    - purpose:    LogLike
-      capability: lnL_Z_invisible_width
+    # Likelihoods for invisible decays of Z and Higgs bosons
+    - purpose: LogLike
+      capability: lnL_Z_inv
+
+    - purpose: LogLike
+      capability: lnL_Higgs_invWidth
 
     # Observables (not included in likelihood)
     - purpose:    likelihood_details
@@ -165,6 +167,16 @@ ObsLikes:
     - purpose:    Observable
       capability: MSSM_spectrum
       type:       map_str_dbl
+
+    # Observables for invisible decays of Z and Higgs bosons
+    - purpose: Observable
+      capability: Z_gamma_nu
+
+    - purpose: Observable
+      capability: Z_gamma_chi_0
+
+    - purpose: Observable
+      capability: inv_Higgs_BF
 
 Rules:
 
@@ -395,6 +407,9 @@ Rules:
       covariance_marg_convthres_rel: 0.05
       covariance_nsamples_start: 100000
 
+  # Invisible Higgs branching ratio from CMS-PAS-HIG-17-023 with 10% theory error
+  # Path relative to GAMBIT build
+  BR_h_inv_chi2_data_file: ./DecayBit/data/CMS-PAS-HIG-17-023_Figure_7-b_10_profiled.dat
 
 # Set the names of key log files
 Logger:
