--- a/yaml_files/RHN_diff_NH.yaml
+++ b/yaml_files/RHN_diff_NH.yaml
@@ -109,7 +109,7 @@ Scanner:
       version: 1.0.4
       like: LogLike
       NP: 19200
-      convthresh: 1e-8
+      convthresh: 1e-9
       lambdajDE: false
 
     multinest:
@@ -157,7 +157,7 @@ ObsLikes:
     purpose: LogLike
 
   - capability: lnL_mbb_0nubb_GERDA
-    purpose: LogLike
+    purpose: Observable
 
   - capability: lnLckm_Vusmin
     purpose: LogLike
@@ -352,4 +352,4 @@ KeyValues:
     model_invalid_for_lnlike_below: -1e10
     debug: false
 
-  default_output_path: "runs/RHN_diff_NH/"
+  default_output_path: "/home/ubuntu/data/RHN_diff_NH/"
