--- a/yaml_files/RHN_full_IH.yaml
+++ b/yaml_files/RHN_full_IH.yaml
@@ -157,7 +157,7 @@ ObsLikes:
     purpose: LogLike
 
   - capability: lnL_mbb_0nubb_GERDA
-    purpose: LogLike
+    purpose: Observable
 
   - capability: lnLckm_Vusmin
     purpose: LogLike
@@ -352,4 +352,4 @@ KeyValues:
     model_invalid_for_lnlike_below: -1e10
     debug: false
 
-  default_output_path: "runs/RHN_full_IH/"
+  default_output_path: "/home/ubuntu/data/RHN_full_IH/"
