--- a/yaml_files/RHN_diff_IH_lowcoupling.yaml
+++ b/yaml_files/RHN_diff_IH_lowcoupling.yaml
@@ -36,7 +36,7 @@ Parameters:
       range: [6e-5, 9e-5]
       prior_type: flat
     dmNu3l:
-      range: [2e-3, 3e-3]
+      range: [-3e-3, -2e-3]
       prior_type: flat
 
     alpha1:
@@ -58,12 +58,12 @@ Parameters:
       range: [124.1, 127.3]
 
   # Right Handed Neutrino Parameters
-  RightHandedNeutrinos:
+  RightHandedNeutrinos_diff:
     M_1:
       range: [0.06, 500]
       prior_type: log
-    M_2:
-      range: [0.06, 500]
+    delta_M21:
+      range: [1E-4, 500]
       prior_type: log
     M_3:
       range: [0.06, 500]
@@ -111,6 +111,9 @@ Scanner:
       NP: 19200
       convthresh: 1e-10
       lambdajDE: false
+      init_population_strategy: 1
+      max_initialisation_attempts: 5000
+
 
     multinest:
       plugin: multinest
@@ -343,6 +346,10 @@ Rules:
   - capability: RK
     function: RHN_RK
 
+  - capability: Ue1
+    options:
+      upper_limit: 1e-10
+
 KeyValues:
 
   dependency_resolution:
@@ -352,4 +359,4 @@ KeyValues:
     model_invalid_for_lnlike_below: -1e10
     debug: false
 
-  default_output_path: "/home/ubuntu/data/RHN_full_NH/"
+  default_output_path: "/home/ubuntu/data/RHN_diff_IH/"
