--- a/yaml_files/RHN_diff_NH_lightnu.yaml
+++ b/yaml_files/RHN_diff_NH_lightnu.yaml
@@ -30,7 +30,7 @@ Parameters:
     CKM_etabar  :  0.353
 
     mNu_light:
-      range: [1E-6, 1.]
+      range: [1E-11, 1E-5]
       prior_type: log
     dmNu21:
       range: [6e-5, 9e-5]
@@ -58,12 +58,12 @@ Parameters:
       range: [124.1, 127.3]
 
   # Right Handed Neutrino Parameters
-  RightHandedNeutrinos:
+  RightHandedNeutrinos_diff:
     M_1:
       range: [0.06, 500]
       prior_type: log
-    M_2:
-      range: [0.06, 500]
+    delta_M21:
+      range: [1E-4, 500]
       prior_type: log
     M_3:
       range: [0.06, 500]
@@ -352,4 +352,4 @@ KeyValues:
     model_invalid_for_lnlike_below: -1e10
     debug: false
 
-  default_output_path: "/home/ubuntu/data/RHN_full_NH/"
+  default_output_path: "/home/ubuntu/data/RHN_diff_NH/"
