--- a/yaml_files/RHN_diff_NH_lowcoupling.yaml
+++ b/yaml_files/RHN_diff_NH_lowcoupling.yaml
@@ -3,7 +3,7 @@
 Parameters:
 
   # SM parameters.
-  StandardModel_SLHA2:
+  StandardModel_mNudiff:
     # SLHA1
     alphainv:  1.27940010E+02 # alpha^{-1}(mZ)^MSbar *
     GF      :  1.16637870E-05 # G_Fermi **
@@ -29,15 +29,15 @@ Parameters:
     CKM_rhobar  :  0.117
     CKM_etabar  :  0.353
 
-    mNu1:
-      range: [1E-13, 2.3E-10]
+    mNu_light:
+      range: [1E-6, 1.]
       prior_type: log
-    mNu2:
-      range: [1E-12, 2.3E-10]
-      prior_type: log
-    mNu3:
-      range: [1E-11, 2.3E-10]
-      prior_type: log
+    dmNu21:
+      range: [6e-5, 9e-5]
+      prior_type: flat
+    dmNu3l:
+      range: [2e-3, 3e-3]
+      prior_type: flat
 
     alpha1:
       range: [0, 6.283]
@@ -62,11 +62,11 @@ Parameters:
     M_1:
       range: [0.06, 500]
       prior_type: log
-    delta_M_2:
+    delta_M21:
       range: [1E-4, 500]
       prior_type: log
-    delta_M_3:
-      range: [1E-4, 500]
+    M_3:
+      range: [0.06, 500]
       prior_type: log
     ReOm23:
       range: [0, 6.283]
@@ -80,6 +80,8 @@ Parameters:
       range: [0, 6.283]
     ImOm12:
       range: [-7, 7]
+    Rorder:
+      range: [0, 6]
 
 Priors:
 
@@ -107,10 +109,11 @@ Scanner:
       version: 1.0.4
       like: LogLike
       NP: 19200
-      convthresh: 1e-5
+      convthresh: 1e-10
       lambdajDE: false
       init_population_strategy: 1
       max_initialisation_attempts: 5000
+
 
     multinest:
       plugin: multinest
@@ -127,8 +130,8 @@ ObsLikes:
   - capability: lnL_sinW2
     purpose: LogLike
 
-  - capability: lnL_Z_inv_width
-    purpose: LogLike
+#  - capability: lnL_Z_inv_width
+#    purpose: Observable
 
   - capability: lnL_W_decays
     purpose: LogLike
@@ -145,7 +148,19 @@ ObsLikes:
     purpose: LogLike
 
   - capability: lnL_0nubb
+    purpose: Observable
+
+  - capability: mbb_0nubb_Xe
+    purpose: Observable
+
+  - capability: mbb_0nubb_Ge
+    purpose: Observable
+
+  - capability: lnL_mbb_0nubb_KamLAND_Zen
     purpose: LogLike
+
+  - capability: lnL_mbb_0nubb_GERDA
+    purpose: Observable
 
   - capability: lnLckm_Vusmin
     purpose: LogLike
@@ -322,18 +337,6 @@ ObsLikes:
 
 Rules:
 
-  - capability: Ue1
-    options:
-      upper_limit: 1e-10
-
-  - capability: m_nu
-    options:
-      ordering: 1
-
-  - capability: SeesawI_Theta 
-    options:
-      R_order: 123
-
   - capability: RKstar_0045_11
     function: RHN_RKstar_0045_11
 
@@ -342,6 +345,11 @@ Rules:
   
   - capability: RK
     function: RHN_RK
+
+  - capability: Ue1
+    options:
+      upper_limit: 1e-10
+
 
 KeyValues:
 
@@ -352,5 +360,4 @@ KeyValues:
     model_invalid_for_lnlike_below: -1e10
     debug: false
 
-    #  default_output_path: "../../../scratch/RHN_diff_NH_123_lowcoupling/"
-  default_output_path: "runs/RHN_diff_NH_123_lowcoupling/"
+  default_output_path: "/home/ubuntu/data/RHN_diff_NH/"
