Updated targeted scans

--- a/yaml_files/RHN_diff_IH_lowcoupling.yaml
+++ b/yaml_files/RHN_diff_IH_lowcoupling.yaml
@@ -147,9 +147,6 @@ ObsLikes:
   - capability: LUV_LL
     purpose: LogLike
 
-  - capability: lnL_0nubb
-    purpose: Observable
-
   - capability: mbb_0nubb_Xe
     purpose: Observable
 
@@ -160,7 +157,7 @@ ObsLikes:
     purpose: LogLike
 
   - capability: lnL_mbb_0nubb_GERDA
-    purpose: Observable
+    purpose: LogLike
 
   - capability: lnLckm_Vusmin
     purpose: LogLike
