--- a/yaml_files/RHN_diff_IH_heavynu.yaml
+++ b/yaml_files/RHN_diff_IH_heavynu.yaml
@@ -144,9 +144,6 @@ ObsLikes:
   - capability: LUV_LL
     purpose: LogLike
 
-  - capability: lnL_0nubb
-    purpose: Observable
-
   - capability: mbb_0nubb_Xe
     purpose: Observable
 
@@ -157,7 +154,7 @@ ObsLikes:
     purpose: LogLike
 
   - capability: lnL_mbb_0nubb_GERDA
-    purpose: Observable
+    purpose: LogLike
 
   - capability: lnLckm_Vusmin
     purpose: LogLike
