--- a/yaml_files/RHN_full_IH_lowmass.yaml
+++ b/yaml_files/RHN_full_IH_lowmass.yaml
@@ -30,7 +30,7 @@ Parameters:
     CKM_etabar  :  0.353
 
     mNu_light:
-      range: [1E-3, 1]
+      range: [1E-7, 0.23]
       prior_type: log
     dmNu21:
       range: [6e-5, 9e-5]
@@ -58,12 +58,12 @@ Parameters:
       range: [124.1, 127.3]
 
   # Right Handed Neutrino Parameters
-  RightHandedNeutrinos_diff:
+  RightHandedNeutrinos:
     M_1:
-      range: [0.06, 500]
+      range: [0.01, 1]
       prior_type: log
-    delta_M21:
-      range: [1E-4, 500]
+    M_2:
+      range: [0.06, 500]
       prior_type: log
     M_3:
       range: [0.06, 500]
