--- a/yaml_files/scans/Dirac/DiracDM_low_mass_TWalk_xi_0.yaml
+++ b/yaml_files/scans/Dirac/DiracDM_low_mass_TWalk_xi_0.yaml
@@ -15,7 +15,7 @@ Parameters:
   DiracDM_xi:
     mF: 
       range: [45., 70.]
-      prior_type: log
+      prior_type: flat
     lF: 
       range: [1e-6, 1]
       prior_type: log
