--- a/yaml_files/scans/Majorana/MajoranaDM_extra_diver.yaml
+++ b/yaml_files/scans/Majorana/MajoranaDM_extra_diver.yaml
@@ -1,6 +1,6 @@
 #################################################################################################
 #
-#      DiracDM, low mass region, diver.
+#      MajoranaDM, low mass region, diver.
 #
 #################################################################################################
 
@@ -12,11 +12,11 @@ Parameters:
     mH:
       range: [124.1, 127.3]
 
-  DiracDM_xi:
-    mF: 
-      range: [45., 70.]
-      prior_type: flat
-    lF: 
+  MajoranaDM_xi:
+    mX: 
+      range: [60., 500.]
+      prior_type: log
+    lX: 
       range: [1e-6, 1]
       prior_type: log
     xi:
@@ -106,7 +106,7 @@ ObsLikes:
     # SM nuisance parameter likelihoods     
     - capability: lnL_alpha_s
       purpose:    LogLike    
-              
+                    
     # DM Local Halo likelihoods
     - capability: lnL_rho0
       purpose: LogLike
@@ -147,7 +147,7 @@ Rules:
     options:
       v0_obs: 240
       v0_obserr: 8
-            
+      
   # Set vesc to 533 +/- 32 km/s based on RAVE survey [arXiv:1309.4293]
   - capability: lnL_vesc
     function: lnL_vesc_gaussian
@@ -170,7 +170,7 @@ Rules:
     
   - capability: equilibration_time_Sun
     function: equilibration_time_Sun_FermionDMHiggsPortal
-
+     
   # Choose to rescale signals in direct and indirect detection by the relic density fraction
   - capability: RD_fraction
     function: RD_fraction_leq_one
@@ -178,8 +178,6 @@ Rules:
   # Choose to use detailed Fermi Pass-8 dwarfs likelihoood from gamLike
   - capability: lnL_FermiLATdwarfs
     function:  lnL_FermiLATdwarfs_gamLike
-    options:
-      non_self_conjugate: true
 
   # Choose to use DarkSUSY's yield tables for indirect detection
   - capability: SimYieldTable
@@ -189,16 +187,16 @@ Rules:
 
   # Use DarkBit's own calculations of the direct detection couplings
   - capability: DD_couplings
-    function: DD_couplings_DiracDM
+    function: DD_couplings_MajoranaDM
 
   # Choose to compute decay rates from the DecayBit module
   - capability: decay_rates
     function: all_decays
 
   # Choose to obtain spectrum from the SpecBit module
-  - capability: DiracDM_spectrum
-    function: get_DiracDM_spectrum
-    options: 
+  - capability: MajoranaDM_spectrum
+    function: get_MajoranaDM_spectrum
+    options:
       impose_EFT_validity: true
 
 ##############################################################################################
@@ -207,9 +205,9 @@ Printer:
   printer: hdf5
 
   options:
-    output_file: "Dirac_low_mass_diver.hdf5"
+    output_file: "Majorana_extra_diver.hdf5"
     delete_file_on_restart: true
-    group: "/DDM"    
+    group: "/MDM"    
 
 ##############################################################################################
 Scanner:
@@ -263,4 +261,4 @@ KeyValues:
     model_invalid_for_lnlike_below_alt: -1e+5
     debug: false
 
-  default_output_path: "/marconi_scratch/userexternal/sbloor00/production_scans/Dirac/low_mass/diver"
+  default_output_path: "/marconi_scratch/userexternal/sbloor00/production_scans/Majorana/extra/diver"
