--- a/yaml_files/scans/Majorana/MajoranaDM_low_mass_TWalk.yaml
+++ b/yaml_files/scans/Majorana/MajoranaDM_low_mass_TWalk.yaml
@@ -15,7 +15,7 @@ Parameters:
   MajoranaDM_xi:
     mX: 
       range: [45., 70.]
-      prior_type: log
+      prior_type: flat
     lX: 
       range: [1e-6, 1]
       prior_type: log
