--- a/yaml_files/scans/Majorana/MajoranaDM_low_mass_diver.yaml
+++ b/yaml_files/scans/Majorana/MajoranaDM_low_mass_diver.yaml
@@ -15,7 +15,7 @@ Parameters:
   MajoranaDM_xi:
     mX: 
       range: [45., 70.]
-      prior_type: log
+      prior_type: flat
     lX: 
       range: [1e-6, 1]
       prior_type: log
@@ -261,4 +261,4 @@ KeyValues:
     model_invalid_for_lnlike_below_alt: -1e+5
     debug: false
 
-  default_output_path: "production_scans/Majorana/low_mass/diver"
+  default_output_path: "/marconi_scratch/userexternal/sbloor00/production_scans/Majorana/low_mass/diver"
