--- a/yaml_files/scans/Scalar/ScalarDM_high_mass_MN.yaml
+++ b/yaml_files/scans/Scalar/ScalarDM_high_mass_MN.yaml
@@ -135,6 +135,10 @@ ObsLikes:
 ##############################################################################################
 Rules:
 
+  # Don't pick micromegas for the model comparison.
+  - capability: RD_oh2
+    function: RD_oh2_general
+
   # Choose to implement the relic density likelihood as an upper bound, not a detection
   - capability: lnL_oh2
     function: lnL_oh2_upperlimit
