Updated MSSMEW.yaml to include the "new" multilepton searches that have been split on orthogonal multiplicities.
	modified:   yaml_files/MSSMEW.yaml

--- a/yaml_files/MSSMEW.yaml
+++ b/yaml_files/MSSMEW.yaml
@@ -268,7 +268,7 @@ Rules:
   - capability: MC_ConvergenceSettings
     options:
       min_nEvents: [20000]
-      max_nEvents: [100000]
+      max_nEvents: [1000000]
       events_between_convergence_checks: [20000]
       target_fractional_uncert: [0.3]
       halt_when_systematic_dominated: true
@@ -351,7 +351,9 @@ Rules:
   - capability: ATLASAnalysisContainer
     function: getATLASAnalysisContainer
     options:
-      analyses: [ ["ATLAS_13TeV_MultiLEP_36invfb"] ]
+      analyses: [ [ "ATLAS_13TeV_MultiLEP_2Lep0Jets_36invfb",
+                    "ATLAS_13TeV_MultiLEP_2LepPlusJets_36invfb",
+                    "ATLAS_13TeV_MultiLEP_3Lep_36invfb" ] ]
 
   # ATLASnoeff analysis setup.
   # NOTE: Don't blindly copy this analysis list without also checking the
@@ -378,7 +380,8 @@ Rules:
     options:
       analyses: [ [ "CMS_13TeV_2LEPsoft_36invfb",
                     "CMS_13TeV_2LEPsoft_36invfb_NOCOVAR_NOLIKE",
-                    "CMS_13TeV_MultiLEP_36invfb",
+                    "CMS_13TeV_MultiLEP_2SSLep_36invfb",
+                    "CMS_13TeV_MultiLEP_3Lep_36invfb",
                     "CMS_13TeV_2OSLEP_36invfb",
                     "CMS_13TeV_2OSLEP_36invfb_NOCOVAR_NOLIKE" ] ]
 
