Updated a capability name in a bunch of YAML files. 	modified:   yaml_files/CMSSM.yaml 	modified:   yaml_files/CMSSM_convergence_test.yaml 	modified:   yaml_files/ColliderBit_CMSSM.yaml 	modified:   yaml_files/MSSM11_mApoint.yaml 	modified:   yaml_files/MSSM9.yaml 	modified:   yaml_files/MSSMEW.yaml 	modified:   yaml_files/MSSMEW_pp.yaml

--- a/yaml_files/MSSM9.yaml
+++ b/yaml_files/MSSM9.yaml
@@ -244,7 +244,7 @@ ObsLikes:
 
     # Other observables
     - purpose:    likelihood_details
-      capability: LHC_LogLikes
+      capability: LHC_LogLike_per_analysis
 
     - purpose:    Observable
       capability: LHC_signals
