--- a/yaml_files/MSSMEW_pp.yaml
+++ b/yaml_files/MSSMEW_pp.yaml
@@ -144,7 +144,7 @@ ObsLikes:
 
     # Observables (not included in likelihood)
     - purpose:    likelihood_details
-      capability: LHC_LogLikes
+      capability: LHC_LogLike_per_analysis
 
     - purpose:    Observable
       capability: LHC_signals
