--- a/yaml_files/MSSM11_mApoint.yaml
+++ b/yaml_files/MSSM11_mApoint.yaml
@@ -267,7 +267,7 @@ ObsLikes:
 
     # Other observables
     - purpose:    likelihood_details
-      capability: LHC_LogLikes
+      capability: LHC_LogLike_per_analysis
 
     - purpose:    Observable
       capability: LHC_signals
