--- a/yaml_files/scans/Majorana/MajoranaDM_fixed_xi_MN.yaml
+++ b/yaml_files/scans/Majorana/MajoranaDM_fixed_xi_MN.yaml
@@ -153,17 +153,15 @@ Rules:
       vesc_obs: 533
       vesc_obserr: 31.9
       
-      
   # Set sigmal to 50+/- 15 MeV based on Bishara et al [arXiv:1707.06998]
   - capability: lnL_SI_nuclear_parameters
     function: lnL_sigmas_sigmal
     options:
-      sigmas_central: 43.0
-      sigmas_error: 8.0
-      sigmal_central: 50.0
-      sigmal_error: 15.0
-
-
+      sigmas_obs: 43.0
+      sigmas_obserr: 8.0
+      sigmal_obs: 50.0
+      sigmal_obserr: 15.0
+      
   # Choose to use capgen for solar capture
   - capability: capture_rate_Sun
     function: capture_rate_Sun_vnqn
