Removed the highmass ATLAS_3b analysis from the total loglike (overlap with lowmass analysis). Will still output the signal and loglike values.
	modified:   yaml_files/MSSMEW_rj.yaml

--- a/yaml_files/MSSMEW_rj.yaml
+++ b/yaml_files/MSSMEW_rj.yaml
@@ -407,6 +407,7 @@ Rules:
                        "CMS_13TeV_2OSLEP_36invfb_nocovar",
                        "ATLAS_13TeV_3b_discoverySR_24invfb",
                        "ATLAS_13TeV_3b_discoverySR_36invfb",
+                       "ATLAS_13TeV_3b_36invfb",
                        "ATLAS_13TeV_MultiLEP_2Lep0Jets_36invfb",
                        "ATLAS_13TeV_MultiLEP_2LepPlusJets_36invfb",
                        "ATLAS_13TeV_MultiLEP_3Lep_36invfb" ]
